syntax = "proto2";

message ProposerToAcceptor {
    enum Type {
        p1a = 1;
        p2a = 2;
    }

    required Type type = 1;
    required int32 id = 2;
    required int32 ballot = 3;
    optional int32 slot = 4;
    optional string payload = 5;
}

message AcceptorToProposer {
    enum Type {
        p1b = 1;
        p2b = 2;
    }

    required Type type = 1;
    required int32 id = 2;
    required int32 ballot = 3;
    optional string log = 4; //TODO Acceptors send back whole log in P1B. Could be bad for bandwidth
}

message IAmLeader {
    required int32 id = 1;
}